src/CircularRevealPanel.css
.circular-reveal__overlay {
  position: relative;
  pointer-events: all;
}

.circular-reveal__revealCurtain {
  position: absolute;
  width: 0;
  height: 0;
  border-radius: 50%;
  overflow: hidden;
}

.circular-reveal__revealContent {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  min-width: 500px;
}

